set(PROJECT My_Pico_Novel)
cmake_minimum_required(VERSION 3.12)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
project(${PROJECT} C CXX ASM)
pico_sdk_init()
add_executable(${PROJECT} src/main.c src/prog.S src/test.c)
target_link_libraries(${PROJECT} pico_stdlib)
target_compile_options(${PROJECT} PRIVATE -Wall -Werror)
pico_add_extra_outputs(${PROJECT})
pico_enable_stdio_usb(${PROJECT}  1)
pico_enable_stdio_uart(${PROJECT} 1)
